- https://github.com/eclipse-sirius/sirius-web/issues/2658[#2658] [sirius-web] Add dedicated colors for navigation bar in the Sirius Web theme.
The theme provided by the user must now provide navigation bar colors:
```ts
...
navigationBar: {
  border: 'yellow',
  background: 'blue',
},
...
```

=== Dependency update


=== Bug fixes


=== New Features


=== Improvements

- https://github.com/eclipse-sirius/sirius-web/issues/2675[#2675] [view] Improve `IViewDiagramElementFinder` by adding new methods:
* `List<NodeDescription> getNodeDescriptions();` to retrieve all `NodeDescriptions` created by providers.
* `List<EdgeDescription> getEdgeDescriptions();` to retrieve all `EdgeDescriptions` created by providers.
- https://github.com/eclipse-sirius/sirius-web/issues/2733[#2733] Leverage the page object model to improve out integration tests
- https://github.com/eclipse-sirius/sirius-web/issues/2658[#2658] [sirius-web] Add dedicated colors for navigation bar in the Sirius Web theme


== v2023.12.0

=== Shapes

- Add support for custom nodes in Diagram representations
- Add the possibility to specify a size ratio on node.
- Add support for rotatable border node
- Improve handles management in React Flow based diagrams

=== Architectural decision records

- [ADR-111] Add support for image overlay
- [ADR-112] Provide only valid view descriptions to the renderer
- [ADR-113] Add support for multiple IObjectService
- [ADR-114] Add support for multiple IEditService
- [ADR-115] Split the Sirius Web frontend
- [ADR-116] Add support for changing the content of the explorer
- [ADR-117] Add support for changing the content of the details view
- [ADR-118] Use dynamic handles to connect edges between nodes
- [ADR-119] Share layout data between subscribers
- [ADR-120] Improve the arrange all action with reactflow
- [ADR-121] Add process before and after input handling

=== Breaking changes
