@@ -26,6 +26,13 @@ navigationBar: {
 },
 ...
 ```
+- https://github.com/eclipse-sirius/sirius-web/issues/2669[#2669] [sirius-web] Add dedicated colors for selected elements in the Sirius Web theme.
+The theme provided by the user must now provide selected elements colors:
+```ts
+...
+selected: 'gray',
+...
+```
 
 === Dependency update
 
@@ -43,6 +50,7 @@ navigationBar: {
 * `List<EdgeDescription> getEdgeDescriptions();` to retrieve all `EdgeDescriptions` created by providers.
 - https://github.com/eclipse-sirius/sirius-web/issues/2733[#2733] Leverage the page object model to improve out integration tests
 - https://github.com/eclipse-sirius/sirius-web/issues/2658[#2658] [sirius-web] Add dedicated colors for navigation bar in the Sirius Web theme
+- https://github.com/eclipse-sirius/sirius-web/issues/2669[#2669] [sirius-web] Add dedicated colors for selected elements in the Sirius Web theme
 
 
 == v2023.12.0
